--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "notebook>=7.4.2",
     "numpy>=2.2.6",
+    "scikit-learn>=1.6.1",
     "torch>=2.7.0",
 ]
